<resources>
    <string name="app_name">FireBaseBasics</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_not_have_an_account_sign_up_here">Do not have an account? Sign up here</string>
    <string name="already_have_an_account_log_in_here">Already have an account? Log in here</string>
    <string name="log_out">Log out</string>
</resources>